[project]
name = "sachi"
dynamic = ["version"]
description = "Terminal media files renamer (FileBot alternative)"
readme = "README.md"
license = "MIT"
authors = [{ name = "NextFire", email = "git@yuru.moe" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]==3.14.1",
    "backoff==2.2.1",
    "click==8.4.1",
    "guessit==3.8.0",
    "jinja2==3.1.6",
    "pydantic==2.13.4",
    "pymediainfo==7.0.1",
    "setuptools==82.0.1",        # guessit requirement
    "textual==8.2.7",
    "tomlkit==0.15.0",
    "typer==0.26.7",
    "yarl==1.24.2",
]

[dependency-groups]
dev = ["pyright==1.1.410", "ruff==0.15.18", "textual-dev==1.8.0"]

[project.scripts]
sachi = "sachi:cli_app"

[project.urls]
homepage = "https://github.com/NextFire/sachi"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pyright]
pythonVersion = "3.12"

[tool.ruff.lint]
extend-select = ["I"]
